Controllers contract testing | Updated 403-Forbidden exception handling | Updated Spring Security in order to handle JWT exceptions